--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -3704,6 +3704,10 @@ body {
     font-size: 1.1rem;
   }
 }
+.twitter-tweet iframe {
+  transform: none !important;
+}
+
 .network {
   position: relative;
 }
