--- a/assets/sass/index.scss
+++ b/assets/sass/index.scss
@@ -26,4 +26,5 @@
 @import './ton-vote.scss';
 @import './dlimit.scss';
 @import './liquidity-hub.scss';
-@import './perps.scss'
+@import './perps.scss';
+@import './dsltp.scss';
